# johnnydep

./: .coveragerc  .gitignore  .travis.yml  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  setup.py
.github/: codecov.yml
.github/workflows/: ci.yml
johnnydep/: __init__.py  __main__.py  cli.py  compat.py  dot.py  downloader.py  env_check.py  lib.py  logs.py  pipper.py  util.py
tests/: conftest.py  m20dist-0.1.2-py2.py3-none-any.whl  test_cli.py  test_dot.py  test_downloader.py  test_env.py  test_gen.py  test_lib.py  test_logs.py  test_pipper.py  test_size_tracking.py  test_util.py  testpath-0.3.1-py2.py3-none-any.whl  testwhlextra-1.0.0-py3-none-any.whl  vanilla-0.1.2-py2.py3-none-any.whl
tests/fakedist/: README.txt  long_description.rst  setup.cfg
tests/fakeindex/copyingmock/: copyingmock-0.2.tar.gz#md5=9aa6ba13542d25e527fe358d53cdaf3b
tests/fakeindex/distA/: distA-0.1-py2.py3-none-any.whl
tests/fakeindex/distB1/: distB1-0.1-py2.py3-none-any.whl
tests/fakeindex/distB2/: distB2-0.1-py2.py3-none-any.whl
tests/fakeindex/distC/: distC-0.1-py2.py3-none-any.whl  distC-0.2-py2.py3-none-any.whl  distC-0.3-py2.py3-none-any.whl
tests/fakeindex/distL/: distL-0.1-py2.py3-none-any.whl
tests/fakeindex/distR/: distR-0.1-py2.py3-none-any.whl
tests/fakeindex/distX/: distX-0.1-py2.py3-none-any.whl
tests/fakeindex/fakedist/: fakedist-1.2.3-py2.py3-none-any.whl
