[project]
name = "johnnydep"
version = "2.0.0"
description = "Display dependency tree of Python distribution"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "anytree",
    "cachetools",
    "colorama ; platform_system == 'Windows'",
    "importlib_metadata ; python_version < '3.10'",
    "packaging >= 17, != 22",
    "pip >= 22.3",
    "PyYAML",
    "structlog",
    "tabulate",
    "toml",
    "wheel >= 0.32.0",
]

[[project.authors]]
name = "Wim Glenn"
email = "hey@wimglenn.com"

[project.license]
file = "LICENSE"

[project.urls]
homepage = "https://github.com/wimglenn/johnnydep"

[project.scripts]
johnnydep = "johnnydep.cli:main"
pipper = "johnnydep.pipper:main"


[tool.pytest.ini_options]
testpaths = tests
addopts = [
    "-ra",
    "--cov=johnnydep",
    "--cov-report=html",
    "--cov-report=term",
    "--no-cov-on-fail",
    "--color=yes",
    "--disable-socket",
]
