[metadata]
name = fakedist
version = attr: fakedistmod.__version__
url = https://notexist
author = Wim Glenn
author_email = hey@wimglenn.com
classifiers =
    Programming Language :: Python
    Intended Audience :: Developers
license = MIT
description = This is a fake distribution for johnnydep's test suite
long_description = file: long_description.rst
long_description_content_type = utf-8
keywords =
    testing
    dependencies

[options]
python_requires = >=2.7, !=3.0.*, !=3.1.*
py_modules = fakedistmod

[options.extras_require]
dev = wheel>=0.30.0

[wheel]
universal = 1
